<resources>
    <string name="app_name">Photo</string>
    <!-- 文字编辑对话框字符串 -->
    <string name="edit_text_title">编辑文字</string>
    <string name="add_text_title">添加文字</string>
    <string name="text_input_hint">输入文字</string>
    <string name="font_label">字体</string>
    <string name="font_size_label">字号</string>
    <string name="color_label">颜色</string>
    <string name="select_color">选择颜色</string>
    <string name="opacity_label">透明度</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="add">添加</string>
</resources>